# se-toolkit-lab-9

./: .env.example  .gitignore  API_KEY_SETUP.md  CHANGELOG.md  HISTORY.md  LICENSE  PLAN.md  QUICK_REFERENCE.md  README.md  STATUS_REPORT.md  deploy.sh  docker-compose.yml  test_api.py
.qwen/: settings.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: chat.py  excursions.py  statistics.py  users.py
backend/app/services/: ai_service.py
caddy/: Caddyfile
client-web-react/: .dockerignore  Dockerfile  nginx.conf  package.json
client-web-react/public/: index.html  ws-test.html
client-web-react/src/: App.css  App.js
client-web-react/src/components/: Auth.js  ChatInterface.css  ChatInterface.js  StatisticsDashboard.css  StatisticsDashboard.js  TelegramLogin.css  TelegramLogin.js
nanobot/: Dockerfile  pyproject.toml
nanobot/app/: agent.py  config.py  llm_client.py
otel-collector/: otel-collector.yaml
telegram-bot/app/: handlers.py
wiki/: README.md  api-reference.md  architecture.md  backend.md  data-model.md  deployment.md  development.md  frontend.md  infrastructure.md  nanobot.md
