[project]
name = "tourstats-nanobot"
version = "0.1.0"
description = "TourStats AI Agent"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.109.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
